--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: facebook
-    url: https://www.facebook.com/PatrickClive
+  - title: lattes
+    url: http://lattes.cnpq.br/1690094678178691
   - title: github
     url: https://github.com/patrickkabongo/patrickkabongo.github.io
   - title: linkedin
