--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: lattes
-    url: http://lattes.cnpq.br/1690094678178691
   - title: github
-    url: https://github.com/patrickkabongo/patrickkabongo.github.io
+    url: https://github.com/patrickkabongo
   - title: linkedin
     url: https://www.linkedin.com/in/patrick-cisuaka-kabongo-8ba491127/
+  - title: instagram
+    url: https://www.instagram.com/patrickclive
