--- a/_config.yml
+++ b/_config.yml
@@ -30,5 +30,5 @@ social:
     url: https://github.com/patrickkabongo
   - title: linkedin
     url: https://www.linkedin.com/in/patrick-cisuaka-kabongo-msc-8ba491127/
-  - title: twitter
-    url: https://twitter.com/CisuakaKabongo
+  - title: codesignal
+    url: https://app.codesignal.com/profile/patrick_k15/overview
