--- a/_config.yml
+++ b/_config.yml
@@ -30,5 +30,5 @@ social:
     url: https://github.com/patrickkabongo
   - title: linkedin
     url: https://www.linkedin.com/in/patrick-cisuaka-kabongo-msc-8ba491127/
-  - title: codesignal
-    url: https://app.codesignal.com/profile/patrick_k15/overview
+  - title: google (cv)
+    url: https://drive.google.com/file/d/1pnJEHIy0fR_4CHSyqLGeJFei3Yj0sVng/view?usp=sharing
